apps/navidrome/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app.kubernetes.io/name: navidrome
    app.kubernetes.io/instance: moya-navidrome
  ports:
  - port: 4533
    targetPort: 4533
    name: http
