apps/navidrome/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: navidrome
  namespace: media
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: navidrome
    sectionName: https-gw
  hostnames:
  - navidrome.moya.lemon.narthollis.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: navidrome
      port: 4533
      weight: 1
    filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: local-network
